--- a/style.css
+++ b/style.css
@@ -1,16 +1,54 @@
 * {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
-    width: 100%;
+}
+
+header {
+    background: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url('img/gtrBG.jpg');
+    height: 800px;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .nav {
-    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('img/gtrBG.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    height: 800px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: white;
+    padding-top: 2rem;
 }
 .nissanLogo img {
     width: 100px;
+}
+.headerText {
+    display: flex;
+    gap: 3rem;
+}
+.accountSearch {
+    display: flex;
+    align-items: center;
+    gap: 3rem;
+}
+.accountFlex {
+    display: flex;
+    gap: .5rem;
+}
+.accountFlex h4 {
+    font-weight: 400;
+}
+
+.allNew {
+    color: white;
+    text-align: center;
+    margin-top: 6rem;
+    font-size: 2rem;
+}
+.allNew .lighter {
+    font-weight: lighter;
+}
+.allNew .bolder {
+    font-weight: bolder;
 }
