--- a/style.css
+++ b/style.css
@@ -27,6 +27,33 @@ header {
     display: flex;
     gap: 3rem;
 }
+.headerText h3 {
+    position: relative;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+  }
+  
+  .headerText h3:hover {
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+  }
+  
+  .headerText h3::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: rgb(255, 255, 255);
+    transform: scaleX(0);
+    transition: transform 0.3s ease;
+  }
+  
+  .headerText h3:hover::before {
+    transform: scaleX(1);
+  }
 .accountSearch {
     display: flex;
     align-items: center;
