--- a/style.css
+++ b/style.css
@@ -115,6 +115,12 @@ header {
 }
 
 
+.gtrVid video {
+    width: 100%;
+    object-fit: cover;
+    height: 800px;
+}
+
 
 .carChanger {
     text-align: center;
