--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
+    background-color: black;
 }
 
 header {
@@ -18,7 +19,7 @@ header {
     justify-content: space-around;
     align-items: center;
     color: white;
-    padding-top: 2rem;
+    padding-top: 1rem;
 }
 .nissanLogo img {
     width: 100px;
@@ -109,14 +110,14 @@ header {
     font-size: 2rem;
     width: 550px;
     padding-top: 1rem;
+    color: white;
 }
 .specsPic h4 {
-    color: rgb(87, 86, 86);
+    color: rgb(171, 171, 171);
     font-size: 1.2rem;
     width: 550px;
 }
 .btnLearn {
-    background-color: black;
     color: white;
     border: none;
     padding: 10px;
@@ -124,6 +125,7 @@ header {
     font-weight: bolder;
     margin-top: 1rem;
     transition: all 0.5s ease;
+    border: 1px solid white;
 }
 .btnLearn:hover {
     cursor: pointer;
