--- a/style.css
+++ b/style.css
@@ -138,15 +138,15 @@ header {
     flex: 1;
     align-items: center;
     justify-content: center;
-    gap: 2rem;
+    gap: 1rem;
 }
 .linePic hr {
     flex-grow: 1;
     background-color: #eb0000;
-    height: 15px;
+    height: 13px;
     transform: skew(-35deg);
     border: none;
-    margin: 4px 32px 0 0;
+    margin: 60px;
 }
 
 
