--- a/style.css
+++ b/style.css
@@ -154,6 +154,24 @@ header {
     width: 100px;
 }
 
+.viewText {
+    text-align: center;
+    background-color: black;
+}
+.viewText h2 {
+    color: white;
+}
+.viewText input {
+    background: none;
+    border: none;
+    border-bottom: 1px solid #999;
+    font-family: MBCorpoS,Arial,sans-serif;
+    padding: 0 0 4px;
+    transition: border-bottom .15s ease;
+    color: white;
+    width: 18%;
+}
+
 .gtrVid video {
     width: 100%;
     object-fit: cover;
