--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-* {
+body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
+    background: black;
 }
 
 header {
@@ -69,6 +70,7 @@ header {
 }
 .accountFlex {
     display: flex;
+    align-items: center;
     gap: .5rem;
 }
 .accountFlex:hover {
@@ -100,6 +102,7 @@ header {
     padding-bottom: 6rem;
     display: flex;
     justify-content: space-around;
+    align-items: center;
     background: black;
 }
 .specsPic img {
@@ -117,13 +120,14 @@ header {
     width: 550px;
 }
 .btnLearn {
-    color: black;
+    color: white;
     padding: 10px;
     font-size: 1.3rem;
     font-weight: bolder;
     margin-top: 1rem;
     transition: all 0.5s ease;
     border: 2px solid rgb(231, 52, 52);
+    background-color: black;
 }
 .btnLearn:hover {
     cursor: pointer;
@@ -154,9 +158,18 @@ header {
     width: 100px;
 }
 
+.viewInventory {
+
+}
+
 .viewText {
     text-align: center;
     background-color: black;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
 }
 .viewText h2 {
     color: white;
@@ -172,6 +185,36 @@ header {
     width: 18%;
 }
 
+.btnFlex {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.inputBox {
+    flex: 1;
+    
+}
+
+input:focus, textarea:focus, select:focus{
+    outline: none;
+}
+
+.btnFlex .btnSubmit {
+    border: none;
+    background-color: #eb0000;
+    color: white;
+    padding: 10px;
+    border-radius: 2px;
+    font-weight: bold;
+    
+}
+
+.btnSubmit:hover {
+    cursor: pointer;
+    background-color: #ff3232;
+}
+
 .gtrVid video {
     width: 100%;
     object-fit: cover;
@@ -184,4 +227,28 @@ header {
 .infoBtn button {
     margin: 20px;
     font-size: 1.5rem;
+}
+
+.historySection {
+    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(img/gtrblack.webp);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 550px;
+    margin: 50px;
+    border: 2px solid #eb0000;
+}
+
+.historyFlex {
+    text-align: center;
+}
+
+.historyFlex h3 {
+    color: white;
+    font-size: 2rem;
+}
+
+.historyFlex img {
+    width: 1200px;
+
 }
